# machine-setup

./: .gitignore  CLAUDE.md  Pipfile  README.md  ansible.cfg  auto-shutdown.yml  awscli-2.yml  cloudformation.yml  playbook.yml  pyproject.toml  requirements.yml  user.yml
files/: amazon-stop-if-inactive.sh  auto-shutdown.service  auto-shutdown.timer  install-tmux.sh  ubuntu-stop-if-inactive.sh  xstartup
scripts/: galaxy-install.sh  machine-setup.sh
tasks/: auto-shutdown.yml  dev-pro.yml  dev-tools.yml  drupal.yml  home.yml  user.yml  vim.yml
templates/: drupal.conf.j2  pyenvrc.j2
vars/: amazon-vars.yml  defaults.yml  ubuntu-vars.yml
